--- a/index.html
+++ b/index.html
@@ -62,22 +62,24 @@
               </div>
               <div class="nav__list__wrapper">
                 <li>
-                  <a href="./index.html" class="nav__link"> Home </a>
+                  <a href="./index.html" class="nav__link"> Trang chủ </a>
                 </li>
                 <li>
                   <a href="../pages/menu.html" class="nav__link"> Menu </a>
                 </li>
                 <li>
-                  <a href="../pages/about.html" class="nav__link"> About </a>
+                  <a href="../pages/about.html" class="nav__link">
+                    Giới thiệu
+                  </a>
                 </li>
                 <li>
                   <a href="../pages/contact.html" class="nav__link">
-                    Contact
+                    Liên hệ
                   </a>
                 </li>
                 <li>
                   <a href="../pages/booking.html" class="btn primary-btn">
-                    Book Table
+                    Đặt Bàn
                   </a>
                 </li>
               </div>
@@ -96,16 +98,16 @@
         <div class="hero__wrapper">
           <div class="hero__left" data-aos="fade-left">
             <div class="hero__left__wrapper">
-              <h1 class="hero__heading">The flavor of tradition</h1>
+              <h1 class="hero__heading">Hương vị truyền thống Hàn Quốc</h1>
               <p class="hero__info">
-                We are a multi-cuisine restaurant offering a wide variety of
-                food experience in both casual and fine dining environment.
+                Chúng tôi là một nhà hàng đa ẩm thực cung cấp nhiều trải nghiệm
+                ẩm thực trong cả môi trường ăn uống bình dân và cao cấp.
               </p>
               <div class="button__wrapper">
                 <a href="../pages/menu.html" class="btn primary-btn"
-                  >Explore Menu</a
+                  >Xem Menu</a
                 >
-                <a href="../pages/booking.html" class="btn">Book Table</a>
+                <a href="../pages/booking.html" class="btn">Đặt Bàn</a>
               </div>
             </div>
           </div>
@@ -127,21 +129,21 @@
               <img src="../img/wall-clock-icon.svg" alt="icon" />
             </div>
             <h3 class="storeIn4__title">10 AM - 7 PM</h3>
-            <p class="storeIn4__text">Opening Hour</p>
+            <p class="storeIn4__text">Giờ mở cửa</p>
           </div>
           <div class="storeIn4__item">
             <div class="storeIn4__icon">
               <img src="../img/address-icon.svg" alt="icon" />
             </div>
             <h3 class="storeIn4__title">Ha Dong, Ha Noi</h3>
-            <p class="storeIn4__text">Address</p>
+            <p class="storeIn4__text">Địa chỉ</p>
           </div>
           <div class="storeIn4__item">
             <div class="storeIn4__icon">
               <img src="../img/phone-icon.svg" alt="icon" />
             </div>
             <h3 class="storeIn4__title">0981 458 371</h3>
-            <p class="storeIn4__text">Call Now</p>
+            <p class="storeIn4__text">Gọi ngay</p>
           </div>
         </div>
       </div>
@@ -195,14 +197,13 @@
             </div>
           </div>
           <div class="ourSpecials__right">
-            <h2 class="ourSpecials__title">Our Specials</h2>
+            <h2 class="ourSpecials__title">Món Ăn Đặc Sắc</h2>
             <p class="ourSpecials__text">
-              All of our food is prepared daily at our restaurants to ensure the
-              highest quality, freshest meals are delivered to our customers
+              Tất cả thực phẩm của chúng tôi được chuẩn bị hàng ngày tại các nhà
+              hàng của chúng tôi để đảm bảo chất lượng cao nhất, bữa ăn tươi
+              ngon nhất được cung cấp cho khách hàng của chúng tôi
             </p>
-            <a href="../pages/booking.html" class="btn primary-btn"
-              >Book table</a
-            >
+            <a href="../pages/booking.html" class="btn primary-btn">Đặt Bàn</a>
           </div>
         </div>
       </div>
@@ -211,7 +212,7 @@
     <!--Top Dishes-->
     <section id="dishGrid" data-aos="fade-left">
       <div class="container">
-        <h2 class="dishGrid__title">Top Dishes</h2>
+        <h2 class="dishGrid__title">Món Ăn Được Ưa Chuộng</h2>
         <div class="dishGrid__wrapper">
           <div class="dishGrid__item">
             <div class="dishGrid__item__img">
@@ -270,7 +271,7 @@
           </div>
           <div class="discount__info">
             <h3 class="discount__text">20% OFF</h3>
-            <h3 class="discount__title">Demo dish for discount</h3>
+            <h3 class="discount__title">Khuyến Mại Đặc Biệt</h3>
             <h3 class="discount__price">
               <span class="discount__oldPrice">$45</span>
               <span class="discount__newPrice">$36</span>
@@ -278,9 +279,7 @@
             <div class="discount__stars">
               <img src="../img/3star.svg" alt="3star" />
             </div>
-            <a href="../pages/booking.html" class="btn primary-btn"
-              >Book Table</a
-            >
+            <a href="../pages/booking.html" class="btn primary-btn">Đặt Bàn</a>
           </div>
         </div>
       </div>
@@ -310,36 +309,39 @@
           <div class="eventsIn4__left">
             <div class="eventsIn4__item">
               <div class="eventsIn4__item__img">
-                <img src="../img/event-corporate.png" alt="events" />
+                <img src="../img/banbe.jpg" alt="events" />
               </div>
               <div class="eventsIn4__item__info">
-                <h2 class="eventsIn4__item__title">Corporate Events</h2>
+                <h2 class="eventsIn4__item__title">Tiệc Bạn Bè</h2>
                 <p class="eventsIn4__item__text">
-                  K-food is the perfect venue for your corporate events.We
-                  specialize in private parties.
+                  K-food là địa điểm thích hợp để tụ tập bạn bè và ăn uống thoả
+                  thích.
                 </p>
               </div>
             </div>
             <div class="eventsIn4__item">
               <div class="eventsIn4__item__img">
-                <img src="../img/event-weedings.png" alt="events" />
+                <img src="../img/giadinh.jpg" alt="events" />
               </div>
               <div class="eventsIn4__item__info">
-                <h2 class="eventsIn4__item__title">Wedding</h2>
+                <h2 class="eventsIn4__item__title">Tiệc Gia Đình</h2>
                 <p class="eventsIn4__item__text">
-                  K-food is the perfect venue for your Wedding events.We
-                  specialize in private parties.
+                  K-food là một địa điểm thích hợp dành cho gia đình sum họp và
+                  thưởng thức đồ ăn ngon vào những dịp cuối tuần
                 </p>
               </div>
             </div>
           </div>
           <div class="eventsIn4__right">
-            <h2 class="eventsIn4__title">Book for Events</h2>
+            <h2 class="eventsIn4__title">
+              Đặt Tiệc Thân Mật Cùng Gia Đình Và Bạn Bè
+            </h2>
             <p class="eventsIn4_text">
-              Book your private event or coporate function
+              Tận hưởng thời gian vui vẻ bên bạn bè và người thân mà không lo về
+              giờ giấc
             </p>
             <a href="../pages/contact.html" class="btn primary-btn"
-              >Contact Now</a
+              >Liên hệ ngay</a
             >
           </div>
         </div>
@@ -351,13 +353,15 @@
       <div class="container">
         <div class="whyUs__wrapper">
           <div class="whyUs__left" data-aos="fade-right">
-            <h2 class="whyUs__title">Why Choose Our Food</h2>
+            <h2 class="whyUs__title">
+              Tại sao bạn nên chọn đồ ăn của chúng tôi?
+            </h2>
             <p class="whyUs__text">
-              Quality of Service, Food, Ambiance, and Value of Money are the
-              primary elements for choosing a restaurant. Shaif's Cuisine is one
-              of the most exquiste fine-dinning restaurant in Chittagong cities
-              with a captivating view of GEC Hills, perfect ambiance, and
-              scrumptious food.
+              Chất lượng dịch vụ, thức ăn, không gian và giá trị đồng tiền là
+              những yếu tố chính để lựa chọn một nhà hàng.K-Food là một trong
+              những nhà hàng cao cấp sang trọng nhất ở các thành phố Hà Nội với
+              tầm nhìn quyến rũ ra khuôn viên Hồ Văn Quán, bầu không khí hoàn
+              hảo và đồ ăn hảo hạng.
             </p>
           </div>
           <div class="whyUs__right" data-aos="fade-left">
@@ -366,25 +370,28 @@
                 <div class="whyUs__item__icon">
                   <img src="../img/whyUs-icon1.svg" alt="quality Food" />
                 </div>
-                <p class="whyUs__item__text">Quality Food</p>
+                <p class="whyUs__item__text">Thực phẩm chất lượng</p>
               </div>
               <div class="whyUs__item">
                 <div class="whyUs__item__icon">
-                  <img src="../img/whyUs-icon2.svg" alt="Classical taste" />
+                  <img src="../img/whyUs-icon2.svg" alt="Hương vị cổ điển" />
                 </div>
-                <p class="whyUs__item__text">Classical taste</p>
+                <p class="whyUs__item__text">Hương vị cổ điển</p>
               </div>
               <div class="whyUs__item">
                 <div class="whyUs__item__icon">
-                  <img src="../img/whyUs-icon3.svg" alt="Skilled chef" />
+                  <img
+                    src="../img/whyUs-icon3.svg"
+                    alt="Đầu bếp chuyên nghiệp"
+                  />
                 </div>
-                <p class="whyUs__item__text">Skilled chef</p>
+                <p class="whyUs__item__text">Đầu bếp chuyên nghiệp</p>
               </div>
               <div class="whyUs__item">
                 <div class="whyUs__item__icon">
-                  <img src="../img/whyUs-icon4.svg" alt="Best service" />
+                  <img src="../img/whyUs-icon4.svg" alt="Dịch vụ chất lượng" />
                 </div>
-                <p class="whyUs__item__text">Best service</p>
+                <p class="whyUs__item__text">Dịch vụ chất lượng</p>
               </div>
             </div>
           </div>
@@ -396,71 +403,72 @@
     <section id="testimonial">
       <div class="container">
         <div class="testimonial__wrapper" data-aos="fade-up">
-          <h2 class="testimonial__title">What Our Customers Say</h2>
+          <h2 class="testimonial__title">Phản Hồi Từ Khách Hàng</h2>
           <div class="testimonial__items__wrapper">
             <div class="testimonial__item">
               <div class="testimonial__item__img">
-                <img src="../img/testimonial_img1.png" alt="Sayed Ahmed" />
+                <img src="../img/banbe.jpg" alt="" />
               </div>
               <div class="testimonial__item__info">
-                <h3 class="testimonial__item__name">Sayed Ahmed</h3>
+                <h3 class="testimonial__item__name">Chị Hà</h3>
                 <div class="testimonial__item__stars">
                   <img src="../img/3star.svg" alt="3 star" />
                 </div>
                 <p class="testimonial__item__text">
-                  “Visited Shaif’s Cuisine with friends last Sunday. Really
-                  lovely meal and very warm welcome – we would recommend this
-                  lovely restaurant and will try to go back again”
+                  “ Tôi đã đến K-Food với bạn bè vào Chủ nhật tuần trước. Bữa ăn
+                  thực sự đáng yêu và sự chào đón rất nồng nhiệt - chúng tôi
+                  muốn giới thiệu nhà hàng xinh xắn này và sẽ quay lại lần nữa”
                 </p>
               </div>
             </div>
             <div class="testimonial__item">
               <div class="testimonial__item__img">
-                <img src="../img/testimonial_img1.png" alt="Sayed Ahmed" />
+                <img src="../img/aa.jpg" alt="" />
               </div>
               <div class="testimonial__item__info">
-                <h3 class="testimonial__item__name">Arfan</h3>
+                <h3 class="testimonial__item__name">Anh An</h3>
                 <div class="testimonial__item__stars">
                   <img src="../img/3star.svg" alt="3 star" />
                 </div>
                 <p class="testimonial__item__text">
-                  "from start to finish, lovely experience. Hostess very
-                  pleasant, wait staff john was wonderful and attentive, food
-                  plentiful and delicious, desserts out of this world"
+                  "Từ đầu đến cuối, trải nghiệm đáng yêu. Bà chủ nhà rất dễ
+                  chịu, nhân viên phục vụ thật tuyệt vời và chu đáo, thức ăn
+                  phong phú và ngon miệng."
                 </p>
               </div>
             </div>
             <div class="testimonial__item">
               <div class="testimonial__item__img">
-                <img src="../img/testimonial_img1.png" alt="Sayed Ahmed" />
+                <img src="../img/giadinh.jpg" alt="" />
               </div>
               <div class="testimonial__item__info">
-                <h3 class="testimonial__item__name">Fahim & Nishat</h3>
+                <h3 class="testimonial__item__name">Gia đình bé Tom</h3>
                 <div class="testimonial__item__stars">
                   <img src="../img/3star.svg" alt="3 star" />
                 </div>
                 <p class="testimonial__item__text">
-                  “A warm and friendly welcome with fantastic customer service.
-                  Always great, tasty food served piping hot- just the way we
-                  love it . Would definitely recommend. We have been repeatedly
-                  and it's consistently exceeded our expectations"
+                  “Một sự chào đón nồng nhiệt và thân thiện với dịch vụ khách
+                  hàng tuyệt vời. Luôn luôn tuyệt vời, thức ăn ngon được phục vụ
+                  nóng hổi - đúng như cách chúng tôi yêu thích. Chắc chắn chúng
+                  tôi sẽ giới thiệu cho bạn bè. Chúng tôi đã đến đây nhiều lần
+                  và nó luôn trên sự kỳ vọng của chúng tôi"
                 </p>
               </div>
             </div>
             <div class="testimonial__item">
               <div class="testimonial__item__img">
-                <img src="../img/testimonial_img1.png" alt="Sayed Ahmed" />
+                <img src="../img/ngan.jpg" alt="" />
               </div>
               <div class="testimonial__item__info">
-                <h3 class="testimonial__item__name">Hussain</h3>
+                <h3 class="testimonial__item__name">Bà Ngân</h3>
                 <div class="testimonial__item__stars">
                   <img src="../img/3star.svg" alt="3 star" />
                 </div>
                 <p class="testimonial__item__text">
-                  “I would just like to say thank you for the excellent service
-                  we received in your restaurant last night. Although the place
-                  was very busy we still had an excellent time and really
-                  appreciated the live entertainment too!“
+                  “Tôi chỉ muốn nói lời cảm ơn vì dịch vụ tuyệt vời mà chúng tôi
+                  đã nhận được tại nhà hàng của bạn tối qua. Mặc dù nơi này rất
+                  bận rộn nhưng chúng tôi vẫn có khoảng thời gian tuyệt vời và
+                  cũng thực sự đánh giá cao chương trình giải trí trực tiếp!“
                 </p>
               </div>
             </div>
@@ -474,18 +482,17 @@
       <div class="container">
         <div class="newsletter__wrapper">
           <div class="newsletter__info">
-            <h3 class="newsletter__title">Join Newsletter</h3>
+            <h3 class="newsletter__title">Đăng ký nhận thông báo</h3>
             <p class="newsletter__text">
-              Get notified with the latest news and recent offers from the
-              “K-Food”
+              Nhận thông báo mới nhất từ chúng tôi về ưu đãi và sản phẩm
             </p>
           </div>
           <div class="newsletter__form">
             <form action="">
               <label for="email">
-                <input type="email" placeholder="Your Email Address" />
+                <input type="email" placeholder="Địa chỉ email của bạn" />
               </label>
-              <button type="submit">Join</button>
+              <button type="submit">Đăng ký</button>
             </form>
           </div>
         </div>
@@ -502,8 +509,8 @@
               <img src="../img/logo.png" alt="#" />
             </div>
             <p class="footer__desc">
-              Fresh and delicious traditional Ha Dong food to delight the whole
-              family.
+              Nhà hàng Hàn Quốc với những thực phẩm tươi ngon đậm vị truyền
+              thống
             </p>
             <div class="footer__socials">
               <h4 class="footer_socials__title">Follow us</h4>
@@ -571,36 +578,33 @@
             </div>
           </div>
           <div class="footer__col2">
-            <h3 class="footer__text__title">Links</h3>
+            <h3 class="footer__text__title">Trang</h3>
             <ol class="footer__text">
               <li>
-                <a href="./index.html">Home</a>
+                <a href="./index.html">Trang chủ</a>
               </li>
               <li>
                 <a href="../pages/menu.html">Menu</a>
               </li>
               <li>
-                <a href="../pages/booking.html">Book Table</a>
+                <a href="../pages/booking.html">Đặt Bàn</a>
               </li>
               <li>
-                <a href="../pages/about.html">About Us</a>
+                <a href="../pages/about.html">Giới thiệu</a>
               </li>
               <li>
-                <a href="../pages/contact.html">Contact</a>
-              </li>
-              <li>
-                <a href="#">Privacy Policy</a>
+                <a href="../pages/contact.html">Liên hệ</a>
               </li>
             </ol>
           </div>
           <div class="footer__col3">
-            <h3 class="footer__text__title">Support</h3>
+            <h3 class="footer__text__title">Hỗ Trợ</h3>
             <ol class="footer__text">
               <li>
-                <a href="../pages/contact.html">Home</a>
+                <a href="../pages/contact.html">Trang chủ</a>
               </li>
               <li>
-                <a href="#">Support Center</a>
+                <a href="#">Trung Tâm Hỗ Trợ</a>
               </li>
               <li>
                 <a href="#">Feedback</a>
@@ -608,16 +612,18 @@
             </ol>
           </div>
           <div class="footer__col4">
-            <h3 class="footer__text__title">Contact</h3>
+            <h3 class="footer__text__title">Liên hệ</h3>
             <ol class="footer__text">
               <li>
-                <a href="tel:+880123">+880123</a>
+                <a href="tel:0981 458 371">0981 458 371</a>
               </li>
               <li>
-                <a href="mailto:webcifar@gmail.com">kfood@gmail.com</a>
+                <a href="mailto:webcifar@gmail.com">k-food@gmail.com</a>
               </li>
               <li>
-                <a href="#">Ngo 181, Ha Dong, Ha Noi</a>
+                <a href="https://goo.gl/maps/o47ZH1HrVktuNqSP8"
+                  >Hồ Văn Quán, Hà Đông, Hà Nội</a
+                >
               </li>
             </ol>
           </div>
