--- a/pages/about.html
+++ b/pages/about.html
@@ -63,22 +63,24 @@
               </div>
               <div class="nav__list__wrapper">
                 <li>
-                  <a href="../index.html" class="nav__link"> Home </a>
+                  <a href="../index.html" class="nav__link"> Trang chủ </a>
                 </li>
                 <li>
                   <a href="../pages/menu.html" class="nav__link"> Menu </a>
                 </li>
                 <li>
-                  <a href="../pages/about.html" class="nav__link"> About </a>
+                  <a href="../pages/about.html" class="nav__link">
+                    Giới thiệu
+                  </a>
                 </li>
                 <li>
                   <a href="../pages/contact.html" class="nav__link">
-                    Contact
+                    Liên hệ
                   </a>
                 </li>
                 <li>
                   <a href="../pages/booking.html" class="btn primary-btn">
-                    Book Table
+                    Đặt Bàn
                   </a>
                 </li>
               </div>
@@ -99,20 +101,21 @@
             <img src="../img/ourStoryImg.png" alt="#" />
           </div>
           <div class="ourStory__info">
-            <h3 class="ourStory__title">Out Story</h3>
-            <p class="ourStory__subtitle">It's all started since 2022</p>
+            <h3 class="ourStory__title">Câu chuyện của chúng tôi</h3>
+            <p class="ourStory__subtitle">Bắt đầu từ năm 2022</p>
             <p class="ourStory__text">
-              Welcome to K-Food. We take pride in delivering warm, friendly
-              service and creating mouth-watering culinary delights for all.
-              Using only the freshest locally sourced ingredients, we’ll ensure
-              you have a dining experience to remember.
+              Chào mừng đến với K-Food. Chúng tôi tự hào cung cấp dịch vụ ấm áp,
+              thân thiện và tạo ra những món ăn ngon lạ miệng cho tất cả mọi
+              người. Chỉ sử dụng những nguyên liệu tươi ngon nhất có nguồn gốc
+              địa phương, chúng tôi đảm bảo bạn sẽ có một trải nghiệm ăn uống
+              đáng nhớ.
               <br /><br />
 
-              Since 2022, we are the perfect place for a romantic meal for two,
-              a catch-up with friends, family parties, business meetings, and
-              bringing loved ones together. With comfortable surroundings,
-              affordable prices, and seating for up to 65 guests, we can cater
-              for all occasions.
+              Kể từ năm 2022, chúng tôi là địa điểm hoàn hảo để tổ chức bữa ăn
+              lãng mạn cho hai người, gặp gỡ bạn bè, tiệc gia đình, họp bàn công
+              việc và đưa những người thân yêu đến với nhau. Với môi trường xung
+              quanh thoải mái, giá cả phải chăng và chỗ ngồi cho tối đa 65
+              khách, chúng tôi có thể phục vụ cho tất cả các dịp.
             </p>
           </div>
         </div>
@@ -123,16 +126,16 @@
     <section id="ourGoals" data-aos="fade-down">
       <div class="container">
         <div class="ourGoals__info">
-          <h3 class="ourGoals__title">Our Goals</h3>
+          <h3 class="ourGoals__title">Mục tiêu hướng tới</h3>
           <p class="ourGoals__text">
-            We shall sell delicious and remarkable food and beverages that meet
-            the highest quality, freshness, and seasonality criteria while
-            combining modern-creative and classic cooking traditions. By
-            showcasing warmth, graciousness, efficiency, skill, professionalism,
-            and integrity in our work, we will continually serve our consumers
-            with exceptional service. To have every customer who comes through
-            our doors leave impressed by their experience at K-Food and excited
-            to come back again.
+            Chúng tôi sẽ bán những món ăn và đồ uống ngon và nổi bật, đáp ứng
+            các tiêu chí về chất lượng, độ tươi và tính thời vụ cao nhất đồng
+            thời kết hợp giữa truyền thống nấu ăn cổ điển và sáng tạo hiện đại.
+            Bằng cách thể hiện sự ấm áp, duyên dáng, hiệu quả, kỹ năng, tính
+            chuyên nghiệp và tính chính trực trong công việc của mình, chúng tôi
+            sẽ tiếp tục phục vụ người tiêu dùng bằng dịch vụ đặc biệt. Để mọi
+            khách hàng bước qua cửa của chúng tôi đều để lại ấn tượng về trải
+            nghiệm của họ tại K-Food và hào hứng quay lại lần nữa.
           </p>
         </div>
         <div class="ourGoals__imgs__wrapper">
@@ -158,8 +161,8 @@
               <img src="../img/logo.png" alt="#" />
             </div>
             <p class="footer__desc">
-              Fresh and delicious traditional Ha Dong food to delight the whole
-              family.
+              Nhà hàng Hàn Quốc với những thực phẩm tươi ngon đậm vị truyền
+              thống
             </p>
             <div class="footer__socials">
               <h4 class="footer_socials__title">Follow us</h4>
@@ -227,36 +230,33 @@
             </div>
           </div>
           <div class="footer__col2">
-            <h3 class="footer__text__title">Links</h3>
+            <h3 class="footer__text__title">Trang</h3>
             <ol class="footer__text">
               <li>
-                <a href="./index.html">Home</a>
+                <a href="./index.html">Trang chủ</a>
               </li>
               <li>
                 <a href="../pages/menu.html">Menu</a>
               </li>
               <li>
-                <a href="../pages/booking.html">Book Table</a>
+                <a href="../pages/booking.html">Đặt Bàn</a>
               </li>
               <li>
-                <a href="../pages/about.html">About Us</a>
+                <a href="../pages/about.html">Giới thiệu</a>
               </li>
               <li>
-                <a href="../pages/contact.html">Contact</a>
-              </li>
-              <li>
-                <a href="#">Privacy Policy</a>
+                <a href="../pages/contact.html">Liên hệ</a>
               </li>
             </ol>
           </div>
           <div class="footer__col3">
-            <h3 class="footer__text__title">Support</h3>
+            <h3 class="footer__text__title">Hỗ Trợ</h3>
             <ol class="footer__text">
               <li>
-                <a href="../pages/contact.html">Home</a>
+                <a href="../pages/contact.html">Trang chủ</a>
               </li>
               <li>
-                <a href="#">Support Center</a>
+                <a href="#">Trung Tâm Hỗ Trợ</a>
               </li>
               <li>
                 <a href="#">Feedback</a>
@@ -264,16 +264,18 @@
             </ol>
           </div>
           <div class="footer__col4">
-            <h3 class="footer__text__title">Contact</h3>
+            <h3 class="footer__text__title">Liên hệ</h3>
             <ol class="footer__text">
               <li>
-                <a href="tel:+880123">0981 458 371</a>
+                <a href="tel:0981 458 371">0981 458 371</a>
               </li>
               <li>
-                <a href="mailto:webcifar@gmail.com">kfood@gmail.com</a>
+                <a href="mailto:webcifar@gmail.com">k-food@gmail.com</a>
               </li>
               <li>
-                <a href="#">Ngo 181, Ha Dong, Ha Noi</a>
+                <a href="https://goo.gl/maps/o47ZH1HrVktuNqSP8"
+                  >Hồ Văn Quán, Hà Đông, Hà Nội</a
+                >
               </li>
             </ol>
           </div>
