--- a/pages/booking.html
+++ b/pages/booking.html
@@ -62,22 +62,24 @@
               </div>
               <div class="nav__list__wrapper">
                 <li>
-                  <a href="../index.html" class="nav__link"> Home </a>
+                  <a href="../index.html" class="nav__link"> Trang chủ </a>
                 </li>
                 <li>
                   <a href="../pages/menu.html" class="nav__link"> Menu </a>
                 </li>
                 <li>
-                  <a href="../pages/about.html" class="nav__link"> About </a>
+                  <a href="../pages/about.html" class="nav__link">
+                    Giới thiệu
+                  </a>
                 </li>
                 <li>
                   <a href="../pages/contact.html" class="nav__link">
-                    Contact
+                    Liên hệ
                   </a>
                 </li>
                 <li>
                   <a href="../pages/booking.html" class="btn primary-btn">
-                    Book Table
+                    Đặt Bàn
                   </a>
                 </li>
               </div>
@@ -93,32 +95,32 @@
     <!-- Booking Section -->
     <section id="form" data-aos="fade-up">
       <div class="container">
-        <h3 class="form__title">Book Table</h3>
+        <h3 class="form__title">Đặt Bàn</h3>
         <div class="form__wrapper">
           <form name="booking" method="POST" netlify>
             <div class="form__group">
-              <label for="firstName">First Name</label>
-              <input type="text" id="firstName" name="First Name" required />
+              <label for="firstName">Họ</label>
+              <input type="text" id="firstName" name="Họ" required />
             </div>
             <div class="form__group">
-              <label for="lastName">Last Name</label>
-              <input type="text" id="lastName" name="Last Name" required />
+              <label for="lastName">Tên</label>
+              <input type="text" id="lastName" name="Tên" required />
             </div>
             <div class="form__group">
               <label for="email">Email</label>
               <input type="email" id="email" name="Email" required />
             </div>
             <div class="form__group">
-              <label for="tableType">Table Type</label>
-              <select name="Table Type" id="tableType" required>
-                <option selected disabled>Choose</option>
-                <option value="small">Small (2 persons)</option>
-                <option value="medium">Medium (4 persons)</option>
-                <option value="large">Large(6 persons)</option>
+              <label for="tableType">Loại Bàn</label>
+              <select name="Loại Bàn" id="tableType" required>
+                <option selected disabled>Chọn</option>
+                <option value="small">Nhỏ (2 người)</option>
+                <option value="medium">Trung bình (4 người)</option>
+                <option value="large">Lớn(6-8 người)</option>
               </select>
             </div>
             <div class="form__group">
-              <label for="guestNumber">Guest Number</label>
+              <label for="guestNumber">Mã khách hàng</label>
               <input
                 type="number"
                 id="guestNumber"
@@ -129,7 +131,7 @@
               />
             </div>
             <div class="form__group">
-              <label for="placement">Placement</label>
+              <label for="placement">Tầng</label>
               <select name="Placement" id="placement">
                 <option selected disabled>Chọn</option>
                 <option value="outdoor">Tầng 1</option>
@@ -138,18 +140,18 @@
               </select>
             </div>
             <div class="form__group">
-              <label for="date">Date</label>
+              <label for="date">Ngày</label>
               <input type="date" id="date" name="Date" required />
             </div>
             <div class="form__group">
-              <label for="time">Time</label>
+              <label for="time">Giờ</label>
               <input type="time" id="time" name="Time" required />
             </div>
             <div class="form__group form__group__full">
-              <label for="note">Note</label>
+              <label for="note">Ghi chú</label>
               <textarea name="Note" id="note" rows="4"></textarea>
             </div>
-            <button type="submit" class="btn primary-btn">Book Table</button>
+            <button type="submit" class="btn primary-btn">Đặt Bàn</button>
           </form>
         </div>
       </div>
@@ -164,8 +166,8 @@
               <img src="../img/logo.png" alt="#" />
             </div>
             <p class="footer__desc">
-              Fresh and delicious traditional Ha Dong food to delight the whole
-              family.
+              Nhà hàng Hàn Quốc với những thực phẩm tươi ngon đậm vị truyền
+              thống
             </p>
             <div class="footer__socials">
               <h4 class="footer_socials__title">Follow us</h4>
@@ -233,36 +235,33 @@
             </div>
           </div>
           <div class="footer__col2">
-            <h3 class="footer__text__title">Links</h3>
+            <h3 class="footer__text__title">Trang</h3>
             <ol class="footer__text">
               <li>
-                <a href="./index.html">Home</a>
+                <a href="./index.html">Trang chủ</a>
               </li>
               <li>
                 <a href="../pages/menu.html">Menu</a>
               </li>
               <li>
-                <a href="../pages/booking.html">Book Table</a>
+                <a href="../pages/booking.html">Đặt Bàn</a>
               </li>
               <li>
-                <a href="../pages/about.html">About Us</a>
+                <a href="../pages/about.html">Giới thiệu</a>
               </li>
               <li>
-                <a href="../pages/contact.html">Contact</a>
-              </li>
-              <li>
-                <a href="#">Privacy Policy</a>
+                <a href="../pages/contact.html">Liên hệ</a>
               </li>
             </ol>
           </div>
           <div class="footer__col3">
-            <h3 class="footer__text__title">Support</h3>
+            <h3 class="footer__text__title">Hỗ Trợ</h3>
             <ol class="footer__text">
               <li>
-                <a href="../pages/contact.html">Home</a>
+                <a href="../pages/contact.html">Trang chủ</a>
               </li>
               <li>
-                <a href="#">Support Center</a>
+                <a href="#">Trung Tâm Hỗ Trợ</a>
               </li>
               <li>
                 <a href="#">Feedback</a>
@@ -270,16 +269,18 @@
             </ol>
           </div>
           <div class="footer__col4">
-            <h3 class="footer__text__title">Contact</h3>
+            <h3 class="footer__text__title">Liên hệ</h3>
             <ol class="footer__text">
               <li>
-                <a href="tel:+880123">0981 458 371</a>
+                <a href="tel:0981 458 371">0981 458 371</a>
               </li>
               <li>
-                <a href="mailto:webcifar@gmail.com">kfood@gmail.com</a>
+                <a href="mailto:webcifar@gmail.com">k-food@gmail.com</a>
               </li>
               <li>
-                <a href="#">Ngo 181, Ha Dong, Ha Noi</a>
+                <a href="https://goo.gl/maps/o47ZH1HrVktuNqSP8"
+                  >Hồ Văn Quán, Hà Đông, Hà Nội</a
+                >
               </li>
             </ol>
           </div>
