--- a/pages/contact.html
+++ b/pages/contact.html
@@ -62,22 +62,24 @@
               </div>
               <div class="nav__list__wrapper">
                 <li>
-                  <a href="../index.html" class="nav__link"> Home </a>
+                  <a href="../index.html" class="nav__link"> Trang chủ </a>
                 </li>
                 <li>
                   <a href="../pages/menu.html" class="nav__link"> Menu </a>
                 </li>
                 <li>
-                  <a href="../pages/about.html" class="nav__link"> About </a>
+                  <a href="../pages/about.html" class="nav__link">
+                    Giới thiệu
+                  </a>
                 </li>
                 <li>
                   <a href="../pages/contact.html" class="nav__link">
-                    Contact
+                    Liên hệ
                   </a>
                 </li>
                 <li>
                   <a href="../pages/booking.html" class="btn primary-btn">
-                    Book Table
+                    Đặt Bàn
                   </a>
                 </li>
               </div>
@@ -134,34 +136,34 @@
               <img src="../img/wall-clock-icon.svg" alt="icon" />
             </div>
             <h3 class="storeIn4__title">10 AM - 7 PM</h3>
-            <p class="storeIn4__text">Opening Hour</p>
+            <p class="storeIn4__text">Giờ mở cửa</p>
           </div>
           <div class="storeIn4__item">
             <div class="storeIn4__icon">
               <img src="../img/address-icon.svg" alt="icon" />
             </div>
             <h3 class="storeIn4__title">Ha Dong, Ha Noi</h3>
-            <p class="storeIn4__text">Address</p>
+            <p class="storeIn4__text">Địa chỉ</p>
           </div>
           <div class="storeIn4__item">
             <div class="storeIn4__icon">
               <img src="../img/phone-icon.svg" alt="icon" />
             </div>
             <h3 class="storeIn4__title">0981 458 371</h3>
-            <p class="storeIn4__text">Call Now</p>
+            <p class="storeIn4__text">Gọi ngay</p>
           </div>
         </div>
       </div>
     </section>
     <!-- End Store In4 Section -->
-    <!--Contact Form Section-->
+    <!--Liên hệ Form Section-->
     <section id="form">
       <div class="container">
-        <h3 class="form__title">Contact & Inquiry</h3>
+        <h3 class="form__title">Liên hệ</h3>
         <div class="form__wrapper">
           <form name="contactform">
             <div class="form__group">
-              <label for="firstName">First Name</label>
+              <label for="firstName">Họ</label>
               <input
                 type="text"
                 class="form"
@@ -171,7 +173,7 @@
               />
             </div>
             <div class="form__group">
-              <label for="lastName">Last Name</label>
+              <label for="lastName">Tên</label>
               <input type="text" class="form" id="lastName" name="1" required />
             </div>
             <div class="form__group">
@@ -179,11 +181,11 @@
               <input type="email" class="form" id="email" name="1" required />
             </div>
             <div class="form__group">
-              <label for="Subject">Subject</label>
+              <label for="Chủ đề">Chủ đề</label>
               <input type="text" class="form" id="subject" name="1" required />
             </div>
             <div class="form__group form__group__full">
-              <label for="message">Message</label>
+              <label for="message">Nội dung</label>
               <textarea
                 name="1"
                 id="message"
@@ -195,13 +197,13 @@
               ></textarea>
             </div>
             <button type="submit" class="btn primary-btn" onclick="send()">
-              Send
+              Gửi
             </button>
           </form>
         </div>
       </div>
     </section>
-    <!--End Contact Form Section-->
+    <!--End Liên hệ Form Section-->
     <!-- Footer -->
     <footer>
       <div class="container">
@@ -211,8 +213,8 @@
               <img src="../img/logo.png" alt="#" />
             </div>
             <p class="footer__desc">
-              Fresh and delicious traditional Bangladeshi food to delight the
-              whole family.
+              Nhà hàng Hàn Quốc với những thực phẩm tươi ngon đậm vị truyền
+              thống
             </p>
             <div class="footer__socials">
               <h4 class="footer_socials__title">Follow us</h4>
@@ -280,36 +282,33 @@
             </div>
           </div>
           <div class="footer__col2">
-            <h3 class="footer__text__title">Links</h3>
+            <h3 class="footer__text__title">Trang</h3>
             <ol class="footer__text">
               <li>
-                <a href="../index.html">Home</a>
+                <a href="../index.html">Trang chủ</a>
               </li>
               <li>
                 <a href="../pages/menu.html">Menu</a>
               </li>
               <li>
-                <a href="../pages/booking.html">Book Table</a>
+                <a href="../pages/booking.html">Đặt Bàn</a>
               </li>
               <li>
-                <a href="../pages/about.html">About Us</a>
+                <a href="../pages/about.html">Giới thiệu</a>
               </li>
               <li>
-                <a href="../pages/contact.html">Contact</a>
-              </li>
-              <li>
-                <a href="#">Privacy Policy</a>
+                <a href="../pages/contact.html">Liên hệ</a>
               </li>
             </ol>
           </div>
           <div class="footer__col3">
-            <h3 class="footer__text__title">Support</h3>
+            <h3 class="footer__text__title">Hỗ Trợ</h3>
             <ol class="footer__text">
               <li>
-                <a href="../pages/contact.html">Home</a>
+                <a href="../pages/contact.html">Trang chủ</a>
               </li>
               <li>
-                <a href="#">Support Center</a>
+                <a href="#">Trung Tâm Hỗ Trợ</a>
               </li>
               <li>
                 <a href="#">Feedback</a>
@@ -317,7 +316,7 @@
             </ol>
           </div>
           <div class="footer__col4">
-            <h3 class="footer__text__title">Contact</h3>
+            <h3 class="footer__text__title">Liên hệ</h3>
             <ol class="footer__text">
               <li>
                 <a href="tel:0981 458 371">0981 458 371</a>
@@ -335,9 +334,7 @@
     </footer>
     <div id="copyright">
       <div class="container">
-        <p class="copyright__text">
-          Copyright 2021 Shaif's Cuisine | All rights reserved
-        </p>
+        <p class="copyright__text">Copyright 2021 Shaif's Cuisine |</p>
       </div>
     </div>
     <!-- EndFooter -->
