--- a/pages/menu.html
+++ b/pages/menu.html
@@ -62,22 +62,24 @@
               </div>
               <div class="nav__list__wrapper">
                 <li>
-                  <a href="../index.html" class="nav__link"> Home </a>
+                  <a href="../index.html" class="nav__link"> Trang chủ </a>
                 </li>
                 <li>
                   <a href="../pages/menu.html" class="nav__link"> Menu </a>
                 </li>
                 <li>
-                  <a href="../pages/about.html" class="nav__link"> About </a>
+                  <a href="../pages/about.html" class="nav__link">
+                    Giới thiệu
+                  </a>
                 </li>
                 <li>
                   <a href="../pages/contact.html" class="nav__link">
-                    Contact
+                    Liên hệ
                   </a>
                 </li>
                 <li>
                   <a href="../pages/booking.html" class="btn primary-btn">
-                    Book Table
+                    Đặt Bàn
                   </a>
                 </li>
               </div>
@@ -93,14 +95,14 @@
     <!-- page tittle -->
     <section id="page__tittle">
       <div class="container">
-        <h2 class="page__tittle__text">Explore Our Menu</h2>
+        <h2 class="page__tittle__text">Thực đơn món ăn của chúng tôi</h2>
       </div>
     </section>
     <!-- End page tittle -->
     <!-- Our specicals section-->
     <section id="ourSpecicals">
       <div class="container">
-        <h3 class="ourSpecicals__tittle">Our Specticals</h3>
+        <h3 class="ourSpecicals__tittle">Món Ăn Đặc Sắc</h3>
         <div class="ourSpecicals__wrapper">
           <div class="ourSpecicals__item">
             <div class="ourSpecicals__item__img">
@@ -137,7 +139,7 @@
     <!-- Top Dishes -->
     <section id="dishGrid" data-aos="fade-down">
       <div class="container">
-        <h2 class="dishGrid__title">Top Dishes</h2>
+        <h2 class="dishGrid__title">Món Ăn Được Ưa Chuộng</h2>
         <div class="dishGrid__wrapper">
           <div class="dishGrid__item">
             <div class="dishGrid__item__img">
@@ -182,7 +184,7 @@
     <!-- Breakfast Dishes -->
     <section id="dishGrid" data-aos="fade-up">
       <div class="container">
-        <h2 class="dishGrid__title">Breakfast</h2>
+        <h2 class="dishGrid__title">Bữa Sáng</h2>
         <div class="dishGrid__wrapper">
           <div class="dishGrid__item">
             <div class="dishGrid__item__img">
@@ -251,7 +253,7 @@
     <!-- Lunch Dishes -->
     <section id="dishGrid" data-aos="fade-up">
       <div class="container">
-        <h2 class="dishGrid__title">Lunch</h2>
+        <h2 class="dishGrid__title">Bữa Trưa</h2>
         <div class="dishGrid__wrapper">
           <div class="dishGrid__item">
             <div class="dishGrid__item__img">
@@ -320,7 +322,7 @@
     <!-- Dinner Dishes -->
     <section id="dishGrid" data-aos="fade-up">
       <div class="container">
-        <h2 class="dishGrid__title">Dinner</h2>
+        <h2 class="dishGrid__title">Bữa Tối</h2>
         <div class="dishGrid__wrapper">
           <div class="dishGrid__item">
             <div class="dishGrid__item__img">
@@ -395,8 +397,8 @@
               <img src="../img/logo.png" alt="#" />
             </div>
             <p class="footer__desc">
-              Fresh and delicious traditional Bangladeshi food to delight the
-              whole family.
+              Nhà hàng Hàn Quốc với những thực phẩm tươi ngon đậm vị truyền
+              thống
             </p>
             <div class="footer__socials">
               <h4 class="footer_socials__title">Follow us</h4>
@@ -464,36 +466,33 @@
             </div>
           </div>
           <div class="footer__col2">
-            <h3 class="footer__text__title">Links</h3>
+            <h3 class="footer__text__title">Trang</h3>
             <ol class="footer__text">
               <li>
-                <a href="./index.html">Home</a>
+                <a href="./index.html">Trang chủ</a>
               </li>
               <li>
                 <a href="../pages/menu.html">Menu</a>
               </li>
               <li>
-                <a href="../pages/booking.html">Book Table</a>
+                <a href="../pages/booking.html">Đặt Bàn</a>
               </li>
               <li>
-                <a href="../pages/about.html">About Us</a>
+                <a href="../pages/about.html">Giới thiệu</a>
               </li>
               <li>
-                <a href="../pages/contact.html">Contact</a>
-              </li>
-              <li>
-                <a href="#">Privacy Policy</a>
+                <a href="../pages/contact.html">Liên hệ</a>
               </li>
             </ol>
           </div>
           <div class="footer__col3">
-            <h3 class="footer__text__title">Support</h3>
+            <h3 class="footer__text__title">Hỗ Trợ</h3>
             <ol class="footer__text">
               <li>
-                <a href="../pages/contact.html">Home</a>
+                <a href="../pages/contact.html">Trang chủ</a>
               </li>
               <li>
-                <a href="#">Support Center</a>
+                <a href="#">Trung Tâm Hỗ Trợ</a>
               </li>
               <li>
                 <a href="#">Feedback</a>
@@ -501,16 +500,18 @@
             </ol>
           </div>
           <div class="footer__col4">
-            <h3 class="footer__text__title">Contact</h3>
+            <h3 class="footer__text__title">Liên hệ</h3>
             <ol class="footer__text">
               <li>
-                <a href="tel:+880123">0981 458 371</a>
+                <a href="tel:0981 458 371">0981 458 371</a>
               </li>
               <li>
-                <a href="mailto:webcifar@gmail.com">kfood@gmail.com</a>
+                <a href="mailto:webcifar@gmail.com">k-food@gmail.com</a>
               </li>
               <li>
-                <a href="#">Ngo 181, Ha Dong, Ha Noi</a>
+                <a href="https://goo.gl/maps/o47ZH1HrVktuNqSP8"
+                  >Hồ Văn Quán, Hà Đông, Hà Nội</a
+                >
               </li>
             </ol>
           </div>
